--- a/mod3-solution/css/styles.css
+++ b/mod3-solution/css/styles.css
@@ -1,3 +1,52 @@
-h1{
+.navbar-brand a: {
+	hover;
+}
+.dropdown-menu a: {
+	hover:;
+}
+h1 {
+	text-align: center;
+	margin-bottom: 50px;
+}
+h1, div, p {
+  font-size: 16px;
+}
+li {
 	text-align: center;
 }
+.container-fluid {
+	margin-left: 50px;
+	margin-right: 50px;
+	font-size: 150%;
+}
+.text{
+	margin-bottom: 25px;
+	background-color: #d3d3d3;
+}
+.title {
+  position: relative;
+  text-align: center;
+  font-size: 125%;
+  font-weight: bold;
+}
+.title--chicken{
+  background-color: #d3d3d3;
+  text-align: center;
+}
+.title--beef {
+  background-color: #d3d3d3;
+}
+.title--sushi {
+  background-color: #d3d3d3;
+}
+/* Extra small devices (phones, less than 768px) */
+/* No media query since this is the default in Bootstrap */
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: @screen-sm-min) { ... }
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: @screen-md-min) { ... }
+
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: @screen-lg-min) { ... }
